# cmake_git_version

./: CMakeLists.txt  main.cpp
include/: version.cc.in  version.hh
